fix broken styles

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-list/dot-apps-card/dot-apps-card.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-list/dot-apps-card/dot-apps-card.component.scss
@@ -28,7 +28,7 @@
             .p-widget-content {
                 background-color: $white;
             }
-            .avatar__img {
+            img {
                 filter: unset;
             }
         }
@@ -41,7 +41,7 @@
         .p-card {
             background: $color-palette-gray-200;
         }
-        .avatar__img {
+        img {
             filter: grayscale(1);
         }
         .p-widget-content {
@@ -72,7 +72,6 @@ p-avatar {
     font-weight: bold;
     height: $spacing-3;
     line-height: $spacing-3;
-    overflow: hidden;
     text-overflow: ellipsis;
     transition: color $basic-speed ease;
 }
